; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/ncftp/ncftp/extr_getline.c_gl_redraw.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/ncftp/ncftp/extr_getline.c_gl_redraw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@gl_init_done = common dso_local global i64 0, align 8
@gl_prompt = common dso_local global i32 0, align 4
@gl_pos = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @gl_redraw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gl_redraw() #0 {
  %1 = load i64, i64* @gl_init_done, align 8
  %2 = icmp sgt i64 %1, 0
  br i1 %2, label %3, label %8

3:                                                ; preds = %0
  %4 = call i32 @gl_putc(i8 signext 10)
  %5 = load i32, i32* @gl_prompt, align 4
  %6 = load i32, i32* @gl_pos, align 4
  %7 = call i32 @gl_fixup(i32 %5, i32 -2, i32 %6)
  br label %8

8:                                                ; preds = %3, %0
  ret void
}

declare dso_local i32 @gl_putc(i8 signext) #1

declare dso_local i32 @gl_fixup(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
